:sparkles: Add distance constraint

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   </head>
   <body>
     <canvas id="canvas"></canvas> 
+    <div>
+      <input type="range" id="dist" min="0" max="600" value="300"/>
+      <label for="dist">Distance max</label>
+    </div>
+    <label>Echelle</label>
     <script src="script.js"></script>
   </body>
 </html>
