Ajout d'un bouton pour créer le mur d'escalade

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html> 
   <head>
     <title>Escalade</title> 
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <button id="createWallButton" onclick="createWall()">Créer mur d'escalade</button>
     <canvas id="canvas"></canvas> 
     <div>
       <input type="range" id="dist" min="0" max="600" value="300"/>
