Ajout exporter mur

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <button id="deleteButton" style="display: none;" onclick="deletePositionFile()">
       <img src="trash_icon.png" alt="Delete" width="20" height="20">
     </button>
+    <button id="exportButton"  onclick="exportPositionFile()">Exporter Mur</button>
     <canvas id="canvas"></canvas> 
     <div>
       <input type="range" id="dist" min="0" max="600" value="300"/>
