:sparkles: Add human move

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <button id="uploadPath" onclick="uploadPathFile()">Charger un chemin</button>
     <button id="takePositionsButton" onclick="uploadPositionFile()">Positions des prises</button>
     <button id="createWallButton" onclick="createWall()">Créer mur d'escalade</button>
     <button id="deleteButton" style="display: none;" onclick="deletePositionFile()">
