--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   </head>
   <body>
     <button id="uploadPath" onclick="uploadPathFile()">Charger un chemin</button>
-    <button id="takePositionsButton" onclick="uploadPositionFile()">Positions des prises</button>
+    <button id="takePositionsButton" onclick="uploadPositionFile()">Importer mur</button>
     <button id="createWallButton" onclick="createWall()">Créer mur d'escalade</button>
     <button id="deleteButton" style="display: none;" onclick="deletePositionFile()">
       <img src="trash_icon.png" alt="Delete" width="20" height="20">
     </button>
-    <button id="exportButton"  onclick="exportPositionFile()">Exporter Mur</button>
+    <button id="exportButton"  onclick="exportPositionFile()">Exporter mur</button>
     <canvas id="canvas"></canvas> 
     <div>
       <input type="range" id="dist" min="0" max="600" value="300"/>
