--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <button id="exportPath" onclick="getGeneticPath()">Exporter un chemin</button>
+    <button id="geneticPath" onclick="getGeneticPath()">Chemin génétique</button>
+    <button id="exportPath" onclick="exportPathFile()">Exporter un chemin</button>
     <button id="uploadPath" onclick="uploadPathFile()">Charger un chemin</button>
     <button id="takePositionsButton" onclick="uploadPositionFile()">Importer mur</button>
     <button id="createWallButton" onclick="createWall()">Créer mur d'escalade</button>
