:memo: Add README

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
   <head>
     <title>Escalade</title> 
-    <link rel="stylesheet" href="../static/css/styles.css">
+    <link rel="stylesheet" href="static/css/styles.css">
   </head>
   <body>
     <button id="geneticPath" onclick="getGeneticPath()">Chemin génétique</button>
@@ -20,6 +20,6 @@
       <label for="dist">Distance max</label>
     </div>
     <label>Echelle</label>
-    <script src="../static/js/script.js"></script>
+    <script src="static/js/script.js"></script>
   </body>
 </html>
