--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <img src="trash_icon.png" alt="Delete" width="20" height="20">
     </button>
     <button id="exportButton"  onclick="exportPositionFile()">Exporter mur</button>
+    <button id="symbolicPath">Chemin symbolique</button>
     <canvas id="canvas"></canvas> 
     <div>
       <input type="range" id="dist" min="0" max="600" value="300"/>
