--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="takePositionsButton" onclick="uploadPositionFile()">Importer mur</button>
     <button id="createWallButton" onclick="createWall()">Créer mur d'escalade</button>
     <button id="deleteButton" style="display: none;" onclick="deletePositionFile()">
-      <img src="trash_icon.png" alt="Delete" width="20" height="20">
+      <img src="./static/img/trash_icon.png" alt="Delete" width="20" height="20">
     </button>
     <button id="exportButton"  onclick="exportPositionFile()">Exporter mur</button>
     <button id="symbolingPath" onclick="getSymbolingPath()">Chemin symboling</button>
