--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <label for="dist">Distance max</label>
     </div>
     <label>Echelle</label>
+    <label id="coord"></label>
     <script src="static/js/script.js"></script>
   </body>
 </html>
