--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <button id="geneticPath" onclick="getGeneticPath()">Chemin génétique</button>
+    <button id="aStarPath" onclick="getAStarPath()">Chemin A*</button>
     <button id="exportPath" onclick="exportPathFile()">Exporter un chemin</button>
     <button id="uploadPath" onclick="uploadPathFile()">Charger un chemin</button>
     <button id="takePositionsButton" onclick="uploadPositionFile()">Importer mur</button>
