--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="static/css/styles.css">
   </head>
   <body>
+    <button id="QPath" onclick="getQPath()">Chemin Qlearning</button>
     <button id="geneticPath" onclick="getGeneticPath()">Chemin génétique</button>
     <button id="aStarPath" onclick="getAStarPath()">Chemin A*</button>
     <button id="exportPath" onclick="exportPathFile()">Exporter un chemin</button>
